# token

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  SECURITY.md  Vlkme.md  all_smir.sh  codama.json  codama.mjs  package.json  pnpm-lock.yaml
interface/: Cargo.toml  README.md
interface/src/: error.rs  instruction.rs  lib.rs  native_mint.rs  state.rs
interface/src/state/: account.rs  account_state.rs  mint.rs  mod.rs  multisig.rs  multisignature.rs
p-interface/: Cargo.toml
p-interface/src/: instruction.rs  lib.rs  native_mint.rs
p-interface/src/state/: account.rs  mint.rs
p-token/: Cargo.toml  README.md  keypair.json
p-token/src/: entrypoint-runtime-verification.rs  entrypoint.rs  error.rs  lib.rs  native_mint.rs  stubs.rs
p-token/src/processor/: amount_to_ui_amount.rs  approve.rs  approve_checked.rs  batch.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  get_account_data_size.rs  initialize_account.rs  initialize_account2.rs  initialize_account3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint2.rs  initialize_multisig.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  toggle_account_state.rs  transfer.rs  transfer_checked.rs  ui_amount_to_amount.rs  unwrap_lamports.rs  withdraw_excess_lamports.rs
p-token/src/processor/shared/: approve.rs  burn.rs  initialize_account.rs  initialize_mint.rs  initialize_multisig.rs  mint_to.rs  mod.rs  toggle_account_state.rs  transfer.rs
p-token/src/state/: mod.rs
p-token/test-properties/: .gitignore  VERIFICATION_GUIDE.md  proof_status.md  proof_status.py  run-proofs.sh  run-verification.sh  setup.sh  tests.md
p-token/test-properties/docs/: comprehensive_intrinsics_analysis_cn.md  intrinsics_discovery_summary.md  output.md  smir_intrinsics_analysis_cn.md
p-token/test-properties/docs/test_process_get_account_data_size/: analysis_cn.md  analysis_en.md  intrinsics_analysis.md  intrinsics_analysis_cn.md  node_21_details.txt  node_transitions.txt  nodes_5_6_7_full.txt  nondeterministic_branching_analysis_cn.md  nondeterministic_branching_analysis_en.md  proof_full_output.txt  rules_from_node5.txt
p-token/test-properties/scripts/: analyze_all_intrinsics.py  analyze_intrinsics.py  mk-proof-trees.sh  visualize_proof_tree.py
p-token/tests/: amount_to_ui_amount.rs  approve.rs  approve_checked.rs  batch.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  get_account_data_size.rs  initialize_account.rs  initialize_account2.rs  initialize_account3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint2.rs  initialize_multisig.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs  ui_amount_to_amount.rs  unwrap_lamports.rs  withdraw_excess_lamports.rs
p-token/tests/setup/: account.rs  mint.rs  mod.rs  mollusk.rs
pinocchio/interface/: Cargo.toml
pinocchio/interface/src/: error.rs  instruction.rs
pinocchio/interface/src/state/: account.rs  mint.rs  mod.rs  multisig.rs
pinocchio/program/: Cargo.toml  README.md
pinocchio/program/fuzz/blob/: instr-13Re8GaboomTgFjXP8vLvBZoUvaNybxN8VRQdEk8euXz.fix  instr-263NMCsSrSCmLNkgU311rFLENm5AXrhunqDDHwoqmLNu.fix  instr-2872SxNZsaXZ9pXCkrUfSXBKNC1UryUi93xoc7DqaYG5.fix  instr-2AAd6oEL7UPF9xpYqG3wwt7nCiAq3zHybpkSy8aTS1uJ.fix  instr-2BkE7XPnNvUyoSU6YRcCFmAnoGQMCwo5FEuEFxPB4U37.fix  instr-2Drr6skYZtGkSY7SnqYwKJarpRFZQBsJNnzYggjMazap.fix  instr-2EZCKWPYcD2XrGjH2JXeGVRhMuWW7XcrtvGMC9P7zr5K.fix  instr-2K9NNkFRgtYL9q47zZG3X3FDSAV8EimRvBpi39LVp1H2.fix  instr-2NsjpzEsBkjyLL3grk7fAQojLAbT74S9aYB5DGCaQ7ka.fix  instr-2TLRFzXigoucptDYjzWHAK6FsSw21GumQnfkFQ9cjrrW.fix  instr-2UpJ4WdfUxMhnfJcRsZXtPRxBnGtWQoMrSsuj31foTpq.fix  instr-2UpYJvEL8SPyqGik2fwjZt5cF2MYVPcCsAaYXFjwzDZN.fix  instr-2aD7YeXMc4TiYBAKp5o24ehRPqXUMPweqad9EeXRXNXt.fix  instr-2cyvUPSwtztukjPRHuwUUFWixN1D25hnazAuKXUqRk7a.fix  instr-2gffRHyu1x5WKhWvp8tuhhxtYJD74qT9AoCiQ2G4KQmc.fix  instr-2iZkZDV8xaJYb9dgYS7hm7ewXyC146d19FgDUHdRJ9Z5.fix  instr-2mRpmjHiNbfi4BxuypWjFFtTmsVxKaTq5Nmu9YDHSUKP.fix  instr-2nE9DqKPGUKH7afXiAwtj4BA2zbNRYr2fWogC6c4guLU.fix  instr-2teExJXd1DTkQdEQwmzgzMvabrtMRfRLo6XAkDmuyEgh.fix  instr-2uF8x1vBfV92PRqiwzJchWxkc9iqKcgoYPm3wy2MncU3.fix  instr-39qxjNghJy8q4QmH4EYy3VEk55BobeNeQFYMQRZu7if4.fix  instr-3BDdMM6fyRuxfGbf7hPWvXriSdc1ny6EyZfJoL4aGTR9.fix  instr-3CjnZMLQxBje9hdc14CSKDPBntrvFFBnuAMWmyhax5qo.fix  instr-3FrxHhLsneom2NVoJRbkEBhZoxyd5x6gtzPNXeA1Axha.fix  instr-3Jq3QEC9bcSCxBwyig7MGF5qi5itGUQz5r8pH5Kd4DAC.fix  instr-3V5kJsD69jfb5LXKy5MG1HM58cRVFwXDhFcDALRh58w5.fix  instr-3YEdqrRQzfPiAagcK1gbBLEDXybauLSGTSwfBAvZDWWj.fix  instr-3ZXbfCEpcdnKUMQDYcshFb9wYQR2Lpiv7CC1boPuVJoL.fix  instr-3aT62Rx67nGQjPR3mgR3KXPfxQ6KZzCYw3W3tM3ziHN3.fix  instr-3bXrhTeiybe6RB4sRiAAMS4efv5QXZgESM8Eeu5Ar7JW.fix  instr-3dJoXCQgNrqazP7nNkpK7qUfGZWKwVdpSwoc8DhEdztf.fix  instr-3ihUEth63zTusbjcGk83pq3ZfNDRjYW5K6ckpSQAo574.fix  instr-3mPm7vk2ya79xcgaaReiCW66mPSXvTWdqhizmJQVSLJq.fix  instr-3s7aUwT3df138aRMPzSf4m2hZCzEEEYpbaYuVf96TcXJ.fix  instr-3tgsH2DM1XBX9JGTKe36DzDhEHR9iTCWwQjTLJFyBbVV.fix  instr-3yDAg9Amev9uWMNksDdxZjvVPgTVmzpNwf9xGxCeGPeZ.fix  instr-3yX8Mvx97mPRwZBY1uNzmdmwUfEudTyUpgLiv6hmVUDU.fix  instr-429QTmDtGNJqQ6U1a53eeeiL8BkdCS152sAa5h98o1SY.fix  (+303 more)
pinocchio/program/fuzz/blob-old/: instr-6ZgZKYD34Q2CUc7siyErKzwoSsE4G8Pv44AsLnoYAuxf.fix
pinocchio/program/src/: entrypoint.rs
pinocchio/program/tests/: batch.rs  burn_checked.rs  close_account.rs  initialize_account.rs  initialize_account3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint2.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  revoke.rs  set_authority.rs  sync_native.rs  transfer.rs  ui_amount_to_amount.rs  unwrap_lamports.rs  withdraw_excess_lamports.rs
program/: Cargo.toml  README.md  idl.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  native_mint.rs  processor.rs  state.rs
program/tests/: action.rs  assert_instruction_count.rs  close_account.rs  processor.rs  setup.rs
(+447 files in other folders)
