[package]
name = "spl-token-interface"
version = "1.0.0"
description = "Solana Program Library Token Interface"
documentation = "https://docs.rs/spl-token-interface"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num_enum = "0.7.4"
num-traits = "0.2"
solana-instruction = "2.3.0"
solana-program-error = "2.2.2"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = { version = "2.4.0", features = ["bytemuck"] }
solana-sdk-ids = "2.2.1"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
strum = "0.24"
strum_macros = "0.24"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
