[package]
name = "spl-token-interface"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Solana Program Library Token Interface"
documentation = "https://docs.rs/spl-token-interface"
readme = "README.md"
repository = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"

[lib]
crate-type = ["lib"]

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num_enum = "0.7.4"
num-traits = "0.2"
solana-instruction = "3.0.0"
solana-program-error = "3.0.0"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["bytemuck"] }
solana-sdk-ids = "3.0.0"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
strum = "0.24"
strum_macros = "0.24"

[lints]
workspace = true
