[package]
name = "pinocchio-token-interface"
version = "0.0.0"
description = "Pinocchio instructions and types for interacting with SPL Token program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { version = "0.3", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/pubkey-eq" }

[dev-dependencies]
strum = "0.27"
strum_macros = "0.27"
