[package]
name = "pinocchio-token-program"
version = "0.0.0"
description = "A pinocchio-based Token (aka 'p-token') program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = { version = "0.4", default-features = false }
spl-token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
assert_matches = "1.5.0"
num-traits = "0.2"
solana-instruction = "2.3.0"
solana-keypair = "2.2.3"
solana-program-error = "2.2.2"
solana-program-option = "2.2.1"
solana-program-pack = "2.2.1"
solana-program-test = "2.3.2"
solana-pubkey = "2.4.0"
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-transaction = "2.2.3"
solana-transaction-error = "2.2.1"
solana-system-interface = { version="1.0", features=["bincode"] }
spl-token = { version="^8", features=["no-entrypoint"] }
spl-token-2022 = { version="^9", features=["no-entrypoint"] }

[lints]
workspace = true
