[package]
name = "pinocchio-token-program"
version = "0.0.0"
description = "A pinocchio-based Token (aka 'p-token') program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { version = "0.4", default-features = false }
spl-token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
assert_matches = "1.5.0"
num-traits = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = "2.2.3"
solana-program-error = { workspace = true }
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-program-test = "2.3.4"
solana-pubkey = { workspace = true }
solana-signature = "2.3.0"
solana-signer = "2.2.1"
solana-transaction = "2.2.3"
solana-transaction-error = "2.2.1"
solana-system-interface = { workspace = true }
spl-token = { version="^8", features=["no-entrypoint"] }
spl-token-2022 = { version="^9", features=["no-entrypoint"] }

[lints]
workspace = true
