[package]
name = "spl-token"
version = "8.0.0"
description = "Solana Program Library Token"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num-traits = { workspace = true }
num_enum = "0.7.3"
solana-account-info = "2.3.0"
solana-cpi = "2.2.1"
solana-instruction = { workspace = true }
solana-msg = "2.2.1"
solana-program-entrypoint = "2.3.0"
solana-program-error = { workspace = true }
solana-program-memory = "2.3.1"
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true, features = ["bytemuck"] }
solana-rent = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-sysvar = { version = "2.2.2", features = ["bincode"] }
thiserror = "2.0"

[dev-dependencies]
lazy_static = "1.5.0"
mollusk-svm = "0.3.0"
mollusk-svm-fuzz-fixture = "0.3.0"
proptest = "1.5"
serial_test = "3.2.0"
solana-account = "2.2.1"
solana-account-info = "2.3.0"
solana-clock = "2.2.2"
solana-native-token = "2.2.1"
solana-program-entrypoint = "2.3.0"
solana-rent = { version = "2.2.1", features = ["sysvar"] }
solana-system-interface = { version="1.0", features=["bincode"] }
strum = "0.24"
strum_macros = "0.24"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
