[package]
name = "spl-token"
version = "9.0.0"
description = "Solana Program Library Token"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num-traits = { workspace = true }
num_enum = "0.7.3"
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-instruction = { workspace = true }
solana-msg = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-program-error = { workspace = true }
solana-program-memory = "3.0.0"
solana-program-option = { workspace = true }
solana-program-pack = { workspace = true }
solana-pubkey = { workspace = true, features = ["bytemuck"] }
solana-rent = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-sysvar = { version = "3.0.0", features = ["bincode"] }
spl-token-interface = { version = "2.0" }
thiserror = "2.0"

[dev-dependencies]
lazy_static = "1.5.0"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
proptest = "1.5"
serial_test = "3.2.0"
solana-account = "3.0.0"
solana-account-info = "3.0.0"
solana-clock = "3.0.0"
solana-native-token = "3.0.0"
solana-rent = { version = "3.0.0", features = ["sysvar"] }
solana-system-interface = { version = "2.0", features=["bincode"] }
strum = "0.24"
strum_macros = "0.24"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
