[package]
name = "pinocchio-token-interface"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Pinocchio instructions and types for interacting with SPL Token program"
readme = "./README.md"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = "0.3"

[dev-dependencies]
strum = "0.27"
strum_macros = "0.27"
